--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ osx_image: xcode10
 
 branches:
   only:
-    - azure-pipelines
+    - master
 env:
   - LC_CTYPE=en_US.UTF-8 LANG=en_US.UTF-8
 script:
